[package]
name = "middleware"
version = "0.1.0"
authors = ["Davis Van Sant <davisvansant@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
futures = "0.3.4"
actix-service = "1.0.5"
env_logger = "0.7.1"
actix-session = "0.3.0" 
